# moldb-api

./: .fuse_hidden0002346f00000006  .gitignore  AGENTS.md  API_DOCUMENTATION.md  README.md  build_lmdb.py  build_sqlite.py  config.py  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  lmdb.py  sqlite.py
config/: config.example.json
docs/: API_DOCUMENTATION.md  DESIGN.md
service/: __init__.py  lmdb_api.py  sqlite_api.py
src/moldb/: __init__.py  build.py  cli.py  config.py  logging.py  server.py  store.py
src/moldb/api/: __init__.py  common.py  lmdb.py  sqlite.py
src/moldb/builder/: __init__.py  common.py  lmdb.py  sqlite.py
src/moldb/config/: __init__.py  config.py
src/moldb/core/: __init__.py  lmdb.py  sqlite.py
src/moldb/util/: __init__.py  query_molecule.py
test/: test_api.py  test_lmdb.py  test_sqlite.py
tests/: __init__.py  conftest.py  test_api.py  test_builder.py  test_cli.py  test_config.py  test_core_lmdb.py  test_core_sqlite.py  test_logging.py  test_store.py
