[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moldb"
version = "0.2.0"
description = "High-performance molecular structure storage and query service"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "moldb-api developers"}
]
keywords = ["chemistry", "molecule", "xyz", "lmdb", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "lmdb>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
moldb = "moldb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
